--- a/cdi/pom.xml
+++ b/cdi/pom.xml
@@ -31,7 +31,30 @@
       <artifactId>weld-se</artifactId>
       <version>2.4.8.Final</version>
     </dependency>
+    <!-- Apache deltaspike dependencies -->
+    <dependency>
+      <groupId>org.apache.deltaspike.core</groupId>
+      <artifactId>deltaspike-core-api</artifactId>
+      <scope>compile</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.deltaspike.core</groupId>
+        <artifactId>deltaspike-core-impl</artifactId>
+        <scope>runtime</scope>
+    </dependency>
   </dependencies>
+
+  <dependencyManagement>
+    <dependencies>
+        <dependency>
+            <groupId>org.apache.deltaspike.distribution</groupId>
+            <artifactId>distributions-bom</artifactId>
+            <version>1.9.2</version>
+            <type>pom</type>
+            <scope>import</scope>
+        </dependency>
+    </dependencies>
+  </dependencyManagement>
 
   <build>
     <pluginManagement><!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
