--- a/junit/junit-jpa-extension/pom.xml
+++ b/junit/junit-jpa-extension/pom.xml
@@ -14,7 +14,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     <maven.compiler.source>1.8</maven.compiler.source>
     <maven.compiler.target>1.8</maven.compiler.target>
-    <version.junit5>5.4.1</version.junit5>
+    <version.junit5>5.6.2</version.junit5>
   </properties>
 
   <dependencies>
@@ -48,7 +48,6 @@
       <version>3.11.1</version>
       <scope>test</scope>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-library -->
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-library</artifactId>
@@ -72,4 +71,15 @@
       <scope>test</scope>      
     </dependency>
   </dependencies>
+
+  <build>
+    <pluginManagement>
+      <plugins>
+        <plugin>
+          <artifactId>maven-surefire-plugin</artifactId>
+          <version>2.22.2</version>        
+        </plugin>
+      </plugins>
+    </pluginManagement>
+  </build> 
 </project>
