--- a/junit/junit-test/pom.xml
+++ b/junit/junit-test/pom.xml
@@ -20,22 +20,10 @@
   <dependencies>
     <dependency>
       <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-api</artifactId>
+      <artifactId>junit-jupiter</artifactId>
       <version>${version.junit5}</version>
       <scope>test</scope>
     </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-engine</artifactId>
-      <version>${version.junit5}</version>
-      <scope>test</scope>
-    </dependency>
-    <dependency>
-      <groupId>org.junit.jupiter</groupId>
-      <artifactId>junit-jupiter-params</artifactId>
-      <version>${version.junit5}</version>
-      <scope>test</scope>
-    </dependency>    
     <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-junit-jupiter</artifactId>
@@ -55,17 +43,19 @@
       <version>2.1</version>
       <scope>test</scope>
     </dependency>
-    <!--apache johnzon-->
+    <!-- JSON-B API -->
     <dependency>
       <groupId>javax.json.bind</groupId>
       <artifactId>javax.json.bind-api</artifactId>
       <version>1.0</version>
     </dependency>    
+    <!-- Apache Johnzon implementation of the JSR-367 JSON-B --> 
     <dependency>
         <groupId>org.apache.johnzon</groupId>
         <artifactId>johnzon-jsonb</artifactId>
         <version>1.2.3</version>
     </dependency>
+    <!-- Apache Geronimo implementation of the JSR-353 JSON-P -->
     <dependency>
       <groupId>org.apache.geronimo.specs</groupId>
       <artifactId>geronimo-json_1.1_spec</artifactId>
@@ -74,13 +64,12 @@
   </dependencies>
 
   <build>
-    <pluginManagement>      <!-- lock down plugins versions to avoid using Maven defaults (may be moved to parent pom) -->
+    <pluginManagement> 
       <plugins>
         <plugin>
           <artifactId>maven-clean-plugin</artifactId>
           <version>3.0.0</version>
         </plugin>
-        <!-- see http://maven.apache.org/ref/current/maven-core/default-bindings.html#Plugin_bindings_for_jar_packaging -->
         <plugin>
           <artifactId>maven-resources-plugin</artifactId>
           <version>3.0.2</version>
