--- a/junit/junit-test/pom.xml
+++ b/junit/junit-test/pom.xml
@@ -36,12 +36,17 @@
       <version>3.11.1</version>
       <scope>test</scope>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.hamcrest/hamcrest-library -->
     <dependency>
       <groupId>org.hamcrest</groupId>
       <artifactId>hamcrest-library</artifactId>
       <version>2.1</version>
       <scope>test</scope>
+    </dependency>
+    <dependency>
+        <groupId>org.projectlombok</groupId>
+        <artifactId>lombok</artifactId>
+        <version>1.18.20</version>
+        <scope>test</scope>
     </dependency>
     <!-- JSON-B API -->
     <dependency>
