--- a/junit/junit-jpa-extension/pom.xml
+++ b/junit/junit-jpa-extension/pom.xml
@@ -12,9 +12,9 @@
 
   <properties>
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-    <maven.compiler.source>1.8</maven.compiler.source>
-    <maven.compiler.target>1.8</maven.compiler.target>
-    <version.junit5>5.6.2</version.junit5>
+    <maven.compiler.source>11</maven.compiler.source>
+    <maven.compiler.target>11</maven.compiler.target>
+    <version.junit5>5.8.2</version.junit5>
   </properties>
 
   <dependencies>
@@ -39,7 +39,7 @@
     <dependency>
         <groupId>org.mockito</groupId>
         <artifactId>mockito-junit-jupiter</artifactId>
-        <version>2.25.1</version>
+        <version>4.0.0</version>
         <scope>test</scope>
     </dependency>
     <dependency>
@@ -57,7 +57,7 @@
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>5.4.24.Final</version>
+      <version>5.6.6.Final</version>
     </dependency>
     <dependency>
 			<groupId>org.eclipse.persistence</groupId>
@@ -69,6 +69,11 @@
       <artifactId>h2</artifactId>
       <version>2.1.210</version>
       <scope>test</scope>      
+    </dependency>
+    <dependency>
+    <groupId>org.projectlombok</groupId>
+      <artifactId>lombok</artifactId>
+      <version>1.18.22</version>
     </dependency>
   </dependencies>
 
