--- a/junit/junit-jpa-extension/pom.xml
+++ b/junit/junit-jpa-extension/pom.xml
@@ -57,7 +57,7 @@
     <dependency>
       <groupId>org.hibernate</groupId>
       <artifactId>hibernate-core</artifactId>
-      <version>5.6.6.Final</version>
+      <version>6.0.0.CR2</version>
     </dependency>
     <dependency>
 			<groupId>org.eclipse.persistence</groupId>
